# open-earn-server

./: .gitignore  main.py  pyproject.toml
src/: database.py  dto.py  external.py  file_processor.py  generated.py  interface.py  repository_processor.py
src/templates/: generated.txt
tests/: conftest.py  test_file_processor.py  test_repository_processor.py
