[tool.poetry]
name = "open-earn"
version = "0.1.0"
description = ""
authors = ["Morgan C. Nicholson <nich.morgan@outlook.com>"]
readme = "README.md"
packages = [{include = "open_earn"}]

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
